# strest

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  RELEASE.md  deny.toml
.github/workflows/: pr.yml  release.yml
docs/: ADVANCED.md  README.md  USAGE.md
docs/architecture/: README.md
docs/architecture/adr/: ADR-0001-hexagonal-vertical-slices.md  ADR-0002-type-safety-dispatch-concurrency.md  README.md
docs/architecture/ard/: ARCHITECTURE_BASELINE_METRICS.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_RISKS_HEXAGONAL_PLAN.md  ARCHITECTURE_TECHNICAL_GUIDE.md  README.md
docs/architecture/patterns/: README.md  type-safety-performance-concurrency.md  vertical-slices-hexagonal.md
docs/architecture/rfc/: README.md
docs/architecture/srs/: README.md
docs/guides/: USAGE.md
examples/plugins/: README.md
examples/plugins/echo-hook-logger/: Cargo.toml
examples/plugins/echo-hook-logger/src/: main.rs
examples/plugins/slo-guard/: Cargo.toml
examples/plugins/slo-guard/src/: main.rs
examples/wasm/: interesting.wat
fuzz/: Cargo.toml  run_all.sh
fuzz/fuzz_targets/: cli_args.rs  cli_args_usability.rs  config_json.rs  config_loader.rs  config_toml.rs  controller_mode.rs  form_entry.rs  histogram_base64.rs  histogram_record.rs  load_profile.rs  metrics_log.rs  metrics_range.rs  parse_duration_arg.rs  parse_duration_value.rs  parse_header.rs  parse_tls_version.rs  positive_numbers.rs  rand_regex_url.rs  render_template.rs  scenario_config.rs  scenario_request.rs
kubernetes/: strest-agent-deployment.yaml  strest-controller-deployment.yaml  strest-controller-service.yaml
scripts/: check_architecture.sh
sdk/strest-wasm-plugin-sdk/: Cargo.toml  README.md
sdk/strest-wasm-plugin-sdk/src/: lib.rs
src/: arcshift.rs  entry.rs  error.rs  fuzzing.rs  lib.rs  logger.rs  main.rs  probestack.rs  service.rs  shutdown.rs  shutdown_handlers.rs
src/adapters/: mod.rs
src/adapters/cli/: mapper.rs  mod.rs
src/adapters/runtime/: execution_ports.rs  mod.rs
src/app/: cleanup.rs  compare.rs  export.rs  logs.rs  mod.rs  progress.rs  replay.rs  runner.rs  runtime_errors.rs  summary.rs
src/app/compare/: compare_output.rs
src/app/logs/: merge.rs  parsing.rs  records.rs  setup.rs  streaming.rs
src/app/replay/: bounds.rs  mod.rs  records.rs  runner.rs  snapshots.rs  state.rs  summary.rs  tests.rs  ui.rs
src/app/runner/: alloc.rs  rss.rs
src/app/runner/core/: finalize.rs  mod.rs
src/app/summary/: lines.rs  percentiles.rs
src/application/: commands.rs  distributed_run.rs  local_run.rs  mod.rs  replay_compare.rs  slice_execution.rs
src/args/: cli.rs  defaults.rs  mod.rs  parsers.rs  test_support.rs  tests.rs  types.rs
src/args/cli/: mod.rs  presets.rs  tester.rs
src/args/tests/: defaults.rs  headers.rs  options_core.rs  options_extra.rs  subcommands.rs
src/charts/: aggregated.rs  average.rs  cumulative.rs  driver.rs  errors.rs  inflight.rs  latency.rs  mod.rs  rps.rs  status.rs  streaming.rs  tests.rs  timeouts.rs
src/charts/aggregated/: buckets.rs  latency.rs  mod.rs  rps.rs  util.rs
src/charts/driver/: mod.rs  naming.rs  plotting.rs
src/charts/streaming/: breakdown.rs  latency.rs  mod.rs
src/charts/streaming/basic/: buckets.rs  counts.rs  mod.rs
src/config/: apply.rs  loader.rs  mod.rs  parse.rs  test_support.rs  tests.rs  types.rs
src/config/apply/: distributed.rs  load.rs  scenario.rs  section_basic.rs  section_runtime.rs  section_tail.rs  util.rs
src/config/apply/section_runtime/: section_runtime_network.rs  section_runtime_output.rs
src/distributed/: agent.rs  controller.rs  mod.rs  protocol.rs  summary.rs  tests.rs  utils.rs  wire.rs
src/distributed/agent/: command.rs  run_exec.rs  session.rs  wire.rs
src/distributed/controller/: agent.rs  auto.rs  control.rs  http.rs  load.rs  manual.rs  output.rs  runner.rs  shared.rs  tests.rs
src/distributed/controller/auto/: events.rs  finalize.rs  setup.rs
src/distributed/controller/manual/: connections.rs  control_http.rs  loop_handlers.rs  loop_idle.rs  orchestrator.rs  run_finalize.rs  run_lifecycle.rs  state.rs
src/distributed/controller/shared/: aggregation.rs  events.rs  timing.rs  ui.rs
src/distributed/controller/tests/: aggregation.rs  events.rs  (+2 more)
src/distributed/protocol/: io.rs  mod.rs  types.rs
src/distributed/tests/: mod.rs  sink_runs.rs  stability.rs  wire_args.rs
src/domain/: run.rs
src/entry/: mod.rs
src/entry/plan/: build.rs  execute.rs  mod.rs  types.rs
src/error/: app.rs  config.rs  distributed.rs  http.rs  metrics.rs  mod.rs  script.rs  service.rs  sink.rs  test_support.rs  validation.rs
src/http/: mod.rs  rate.rs  sender.rs  tests.rs  tls.rs  workload.rs
src/http/sender/: config.rs  mod.rs  worker.rs
src/http/workload/: builders.rs  builders_auth.rs  data.rs  execution.rs  runner.rs  runner_common.rs  template.rs
src/metrics/: collector.rs  histogram.rs  logging.rs  mod.rs  tests.rs  types.rs
src/metrics/collector/: mod.rs  state.rs
src/metrics/logging/: mod.rs  reader.rs
src/protocol/: builtins.rs  examples.rs  mod.rs  registry.rs  runtime.rs  tests.rs  traits.rs
src/protocol/examples/: chat_websocket.rs  game_udp.rs  telemetry_mqtt.rs
src/protocol/runtime/: datagram.rs  grpc.rs  mqtt.rs  resolve.rs  spawner.rs  transports.rs  types.rs
src/script/: loader.rs  mod.rs  wasm.rs
src/script/wasm/: constants.rs  loader.rs
src/sinks/: config.rs  format.rs  mod.rs  writers.rs
src/system/: banner.rs  logger.rs  mod.rs  shutdown_handlers.rs  summary_output.rs
src/ui/: mod.rs  model.rs  render.rs  tests.rs
src/ui/render/: charts.rs  charts_status_data.rs  charts_window.rs  dashboard.rs  formatting.rs  frame.rs  lifecycle.rs  progress.rs  summary.rs  summary_panels_metrics.rs  summary_panels_quality.rs  summary_run.rs  theme.rs
src/wasm_plugins/: constants.rs  host.rs  mod.rs  tests.rs  validate.rs
src/wasm_runtime/: loader.rs  mod.rs  module.rs  parse.rs  tests.rs  validate.rs
tests/: e2e_distributed.rs  e2e_replay.rs  e2e_single.rs  e2e_wasm.rs  support_distributed.rs  support_single.rs
(+10 files in other folders)
