[package]
name = "strest"
version = "0.1.8"
edition = "2024"
description = "Blazing-fast async HTTP load tester in Rust - lock-free design, real-time stats, distributed runs, and optional chart exports for high-load API testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["Lythaeon"]
repository = "https://github.com/Lythaeon/strest"
homepage = "https://github.com/Lythaeon/strest"
documentation = "https://docs.rs/strest"
keywords = [
    "load-testing",
    "http",
    "cli",
    "performance",
    "stress-test"
]
categories = [
    "command-line-utilities",
    "development-tools::profiling",
    "web-programming::http-client",
    "network-programming"
]
exclude = ["/fuzz/", "/target/", "/charts/"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "native-tls", "stream"] }
base64 = "0.22.1"
aws-credential-types = "1.2.1"
aws-sigv4 = "1.2.1"
http = "1.1.0"
aws-smithy-runtime-api = { version = "1.9.3", features = ["client", "http-auth"] }
tokio = { version = "1.32.0", features = ["full"] }
rand = "0.8.5"
rand_regex = "0.17.0"
clap = { version = "4.4.4", features = ["derive", "env"] }
async-trait = "0.1"
arcshift = "0.4.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
hdrhistogram = { version = "7.5.4", features = ["serialization"] }
ratatui = "0.23.0"
crossterm = "0.27.0"
once_cell = "1.21.3"
plotters = "0.3.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wasmparser = { version = "0.121.2", optional = true }
url = "2.5.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio-rusqlite = "0.5.1"
futures-util = "0.3.30"
libc = "0.2.159"
thiserror = "1.0.69"
jemalloc-ctl = { version = "0.5.4", optional = true }
jemallocator = { version = "0.5.4", optional = true, features = ["profiling"] }
jemalloc-sys = { version = "0.5.4", optional = true, features = ["profiling"] }

[dev-dependencies]
tempfile = "3.10.1"
wat = "1.0"

[workspace.package]
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
debug = 2
opt-level = 0
overflow-checks = true
incremental = false
panic = "unwind"
lto = false

[features]
fuzzing = []
http3 = ["reqwest/http3"]
wasm = ["dep:wasmparser"]
legacy-charts = []
alloc-profiler = ["dep:jemallocator", "dep:jemalloc-ctl", "dep:jemalloc-sys"]

[lints.rust]
rust_2024_prelude_collisions = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
deprecated_safe_2024 = "warn"

[lints.clippy]
allow_attributes = "deny"
unwrap_used = "deny"
expect_used = "deny"
inefficient_to_string = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
result_large_err = "deny"
map_err_ignore = "deny"
unreachable = "deny"
dbg_macro = "deny"
ignored_unit_patterns = "deny"
await_holding_refcell_ref = "deny"
match_bool = "deny"
if_same_then_else = "deny"
needless_pass_by_value = "deny"
borrowed_box = "deny"
str_to_string = "deny"
filter_map_next = "deny"
iter_not_returning_iterator = "deny"
needless_collect = "deny"
wildcard_enum_match_arm = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
undocumented_unsafe_blocks = "deny"
let_underscore_must_use = "deny"
must_use_candidate = "deny"
match_wild_err_arm = "deny"
indexing_slicing = "deny"
panic_in_result_fn = "deny"
unwrap_in_result = "deny"
missing_const_for_fn = "deny"
implicit_clone = "deny"
redundant_clone = "deny"
lossy_float_literal = "deny"
unnecessary_wraps = "deny"
map_flatten = "deny"
or_fun_call = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
mutex_atomic = "deny"
needless_borrow = "deny"
wildcard_dependencies = "deny"
enum_glob_use = "deny"
match_ref_pats = "deny"
wrong_self_convention = "deny"
trivially_copy_pass_by_ref = "deny"
ptr_arg = "deny"
needless_lifetimes = "deny"
mutable_key_type = "deny"
large_enum_variant = "deny"
vec_box = "deny"
float_cmp = "deny"
bool_assert_comparison = "deny"
cmp_owned = "deny"
string_add = "deny"
assertions_on_constants = "deny"
useless_asref = "deny"
shadow_unrelated = "deny"
arithmetic_side_effects = "deny"
float_arithmetic = "deny"
box_collection = "deny"
unnecessary_box_returns = "deny"
trait_duplication_in_bounds = "deny"
single_char_lifetime_names = "deny"
format_push_string = "deny"
option_if_let_else = "deny"
manual_string_new = "deny"
flat_map_option = "deny"
