[package]
name = "strest-wasm-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for strest WASM plugins (WASI command ABI)"
license = "Apache-2.0"

[lib]
name = "strest_wasm_plugin_sdk"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
